[project]
name = "all-ai-tutorials"
version = "0.1.0"
description = "All my AI related tutorials for different libraries like pytorch, scikit learn and others"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[tool.ruff]
fix = true
lint.select = ["E", "F", "I"]  # Added "I" for import sorting
